<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright (c) 2012 Qweex
Copyright (c) 2012 Jon Petraglia

This software is provided 'as-is', without any express or implied warranty. In no event will the authors be held liable for any damages arising from the use of this software.

Permission is granted to anyone to use this software for any purpose, including commercial applications, and to alter it and redistribute it freely, subject to the following restrictions:

    1. The origin of this software must not be misrepresented; you must not claim that you wrote the original software. If you use this software in a product, an acknowledgment in the product documentation would be appreciated but is not required.

    2. Altered source versions must be plainly marked as such, and must not be misrepresented as being the original software.

    3. This notice may not be removed or altered from any source distribution.
 -->
<resources>

    <string name="Today">Today</string>
    <string name="Next">Next</string>
    <string name="Logbook">Logbook</string>
    <string name="AllTasks">All Tasks</string>
    
    <string name="Low">Low</string>
    <string name="Medium">Medium</string>
    <string name="High">High</string>
    <string name="None">None</string>
    <string name="NoTasks">No Tasks in This List</string>
    
    <string name="General">General</string>
    <string name="WeekStartsOn">Week Starts</string>
    
    <string-array name="weekdays">
	    <item>Sunday</item>
	    <item>Monday</item>
	    <item>Tuesday</item>
	    <item>Wednesday</item>
	    <item>Thursday</item>
	    <item>Friday</item>
	    <item>Saturday</item>
	</string-array>
	<string-array name="weekdays_val">
	    <item>0</item> <item>1</item> <item>2</item> <item>3</item> <item>4</item> <item>5</item> <item>6</item>
    </string-array>
	    
	<string name="weekday1">Sunday</string>
	<string name="show_others_in_next">Show others in next</string>
	<string name="clear_data">Clear data</string>
	<string name="language">Language</string>
	
	

	<string name="theme">Theme</string>
    <string name="background">Change the Background</string>
    <string name="default_background">Use the default background</string>
    <string name="sync">Sync</string>
    <string name="set_up">Set up</string>
    <string name="logout">Logout</string>
    <string name="none">None</string>
    
    <string name="warning">Warning!</string>
    <string name="warning_msg">Are you sure you want to reset Nitro? Your data will be gone forever (a long time)</string>
    <string name="delete_task">Do you really want to delete this task</string>
    <string name="delete_list">Are you sure you want to delete that list?</string>
    <string name="no">No, Keep it</string>
    <string name="yes">Yes, delete it</string>
    <string name="about">About</string>
    
    
    <string name="due_yesterday">Due yesterday</string>
    <string name="due_today">Due today</string>
    <string name="due_tomorrow">Due tomorrow</string>
    <string name="days_overdue">days overdue</string>
    <string name="days_left">days left</string>

    <string name="magic">Magic</string>
    <string name="hand">By hand</string>
    <string name="title">By title</string>
    <string name="date">By date</string>
    <string name="priority">By priority</string>
    
    <string name="default_list">New List</string>
    <string name="default_task">New Task</string>
    <string name="add_list">Add List</string>
    
    <string name="Settings">Settings</string>
    
</resources>